--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -18,6 +18,14 @@
   border-color: var(--jelly-color-primary);
 }
 
+.jelly-archive .jelly-container-main {
+  flex-direction: row-reverse;
+}
+.jelly-archive .jelly-container-sidebar {
+  padding-left: 0;
+  padding-right: 48px;
+}
+
 .jelly-post article p {
   color: #333333;
 }
