--- a/assets/css/widget.scss
+++ b/assets/css/widget.scss
@@ -4,31 +4,32 @@
 .wp-theme-jelly-frame .jelly-search-form {
     display: flex;
     flex-wrap: nowrap;
+    position: relative;
     button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 0 6px 6px 0;
         line-height: 1;
-        background-color: #fff;
-        border-color: var(--jelly-color-border);
-        border-left-width: 0;
-        color: #555;
+        background-color: transparent;
+        border: 0;
+        color: #555555;
         padding: 10px 14px 8px 14px;
+        height: 40px;
         &:hover {
-            border-color: var(--jelly-color-primary);
-            background-color: var(--jelly-color-primary);
-            color: #fff;
+            border-color:transparent;
+            background-color:transparent;
+            color: #141414;
         }
+        position: absolute;
+        right: 0;
+        top: 0;
     }
     input {
         width: 100%;
         font-size: 14px;
-        min-width: 200px;
-        font-size: 14px;
-        border-radius: 6px 0 0 6px;
+        min-width: 240px;
+        border-radius: 6px;
         background-color: #fff;
         border-color: var(--jelly-color-border);
+        height: 40px;
+        padding: 8px 16px;
     }
 }
 
@@ -244,18 +245,18 @@
 .jelly-post-card {
     width: 100%;
     box-sizing: border-box;
-    overflow: hidden;
-    transition: transform 0.3s ease;
-    border-radius: 6px;
+    // overflow: hidden;
+
+    // border-radius: 6px;
     // background-color: var(--jelly-color-item-bg);
-    box-shadow:
-        rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-        rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    // box-shadow:
+    //     rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    //     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     .jelly-card-content {
-        padding: 20px;
+        padding: 20px 0;
         p {
             font-size: 1em;
-            color: #333;
+            color: #555555;
             display: -webkit-box;
             -webkit-box-orient: vertical;
             -webkit-line-clamp: 3;
@@ -267,7 +268,8 @@
         position: relative;
         width: 100%;
         padding-top: 56.25%; // 16:9 比例 (9 / 16 * 100%)
-
+        overflow: hidden;
+        border-radius: 6px;
         img {
             position: absolute;
             top: 0;
@@ -275,6 +277,11 @@
             width: 100%;
             height: 100%;
             object-fit: cover; // 确保图片覆盖整个容器
+
+            transition: transform 0.3s ease;
+            &:hover{
+                transform: scale(1.1);
+            }
         }
     }
     .jelly-card-title {
@@ -323,46 +330,58 @@ nav.jelly-rank-math-breadcrumb {
     .separator {
         margin: 0 4px;
     }
+    .last{
+        color: #555555;
+    }
 }
 
 /*
 * 分类列表
 */
-.jelly-post-categories{
+.jelly-archive-categories{
     margin: 24px 0;
+    .categories-title{
+        font-size: 16px;
+        margin-bottom: 18px;
+    }
     .categories-list{
         list-style: none;
         padding: 0;
-        margin-left: 8px;
-        border-left: 1px solid var(--jelly-color-border);
-        box-sizing: border-box;
+        font-size: 14px;
+        max-height: 400px;
+        overflow-y: auto;
+        &::-webkit-scrollbar{
+            width: 3px;
+        }
+        &::-webkit-scrollbar-track{
+            background-color: var(--jelly-color-border)
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: #555555;
+        }
         li {
-            position: relative;
-            padding-left: 16px;
-            &::before {
-                content: "";
-                display: block;
-                width: 9px;
-                height: 9px;
-                border-radius: 50%;
-                background: #333333;
-                position: absolute;
-                left: -5px;
-                top: 8px;
-            }
+            margin: 0;
+            border-bottom: 1px solid var(--jelly-color-border);
+            padding: 12px 6px;
             &.active{
+                background: #fafafa;
                 a{
-                    color: var(--jelly-color-primary);
-                    text-decoration: underline;
-                }
-                &::before{
-                    background: var(--jelly-color-primary);
+                    color:#141414;
+                    font-weight: 600;
                 }
             }
         }
         a{
             color: #555555;
         }
+    }
+}
+
+.jelly-global-form{
+    margin: 24px 0;
+    .form-title{
+        font-size: 16px;
+        margin-bottom: 18px;
     }
 }
 
