--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
   --jelly-color-border: #e5e5e5;
   --jelly-color-item-bg: #f6f6f6;
   --jelly-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  --jelly-max-width: 1140px;
+  --jelly-max-width: 1240px;
   --jelly-side-width: 16px;
 }
 
@@ -154,7 +154,7 @@ input[type=tel],
 input[type=url],
 select,
 textarea {
-  /* width: 100%; */
+  width: 100%;
   border: solid 1px var(--jelly-color-border);
   border-radius: 0;
   padding: 8px 16px;
