--- a/assets/css/plugin.css
+++ b/assets/css/plugin.css
@@ -102,8 +102,9 @@ nav.rank-math-breadcrumb p {
 }
 .wp-block-rank-math-toc-block h2 {
   font-weight: 600;
-  font-size: 24px !important;
+  font-size: 16px !important;
   position: relative;
+  margin-bottom: 18px;
   margin-top: 0;
 }
 .wp-block-rank-math-toc-block nav {
