--- a/assets/css/plugin.scss
+++ b/assets/css/plugin.scss
@@ -111,8 +111,9 @@ nav.rank-math-breadcrumb p {
     margin: 24px 0;
     h2 {
         font-weight: 600;
-        font-size: 24px !important;
+        font-size: 16px !important;
         position: relative;
+        margin-bottom: 18px;
         margin-top: 0;
     }
     nav {
