--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,5 +1,5 @@
 .jelly-container {
-    width: var(--jelly-max-width, 1140px);
+    width: var(--jelly-max-width, 1240px);
     margin: 0 auto;
     padding: 0 var(--jelly-side-width, 16px);
     box-sizing: border-box;
@@ -9,17 +9,18 @@
 .jelly-container-main {
     display: flex;
     margin: 32px 0;
+    gap: 48px;
 }
 
 .jelly-container-content {
     flex: 0 0 auto;
-    width: 70%;
+    width: 78%;
+    box-sizing: border-box;
     h1{
         margin-top: 0;
     }
 }
 .jelly-container-sidebar {
-    padding-left: 48px;
     flex: 1 0 0%;
 }
 
@@ -33,7 +34,7 @@
     // overflow: hidden;
 }
 
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 1240px) {
     .jelly-container {
         width: 100%;
     }
@@ -44,20 +45,56 @@
 
 @media screen and (max-width: 768px) {
     .jelly-container-main {
-        flex-direction: column;
+        gap: 16px;
+        flex-direction: column !important;
     }
     .jelly-container-content{
         width: 100%;
     }
     .jelly-container-sidebar {
-        padding-left:0px;
         margin-top: 32px;
+        padding-top: 32px;
+        border-top: 1px solid var(--jelly-color-border);
     }
     .jelly-container-grid {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(1, 1fr);
     }
 }
+
+
+
+.alignleft{
+    float: left;
+    margin-right: 1rem;
+}
+.aligncenter{
+    clear: both;
+    display: block;
+    margin-inline: auto;
+}
+
+.alignright{
+    float: right;
+    margin-left: 1rem;
+}
+
+.wp-caption-text{
+    margin:0;
+}
+
+.wp-caption{
+    margin-block-end: 1.25rem;
+    max-width: 100%;
+    img{
+        display: block;
+    margin-inline: auto;
+    }
+    .alignleft{
+        margin: 5px 20px 20px 0;
+    }
+}
+
 .navigation.pagination {
     margin: 32px 0;
     text-align: center;
@@ -108,10 +145,10 @@
     .error-description {
         margin-bottom: 1rem;
     }
-    .jelly-search-form button#searchsubmit {
-        color: #fff;
-        background-color: var(--jelly-color-primary);
-        border-color: var(--jelly-color-primary);
+}
+.jelly-archive{
+    .jelly-container-main{
+        flex-direction: row-reverse;
     }
 }
 .jelly-post article {
@@ -153,31 +190,32 @@
 .wp-theme-jelly-frame .jelly-search-form {
     display: flex;
     flex-wrap: nowrap;
+    position: relative;
     button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 0 6px 6px 0;
         line-height: 1;
-        background-color: #fff;
-        border-color: var(--jelly-color-border);
-        border-left-width: 0;
-        color: #555;
+        background-color: transparent;
+        border: 0;
+        color: #555555;
         padding: 10px 14px 8px 14px;
+        height: 40px;
         &:hover {
-            border-color: var(--jelly-color-primary);
-            background-color: var(--jelly-color-primary);
-            color: #fff;
+            border-color:transparent;
+            background-color:transparent;
+            color: #141414;
         }
+        position: absolute;
+        right: 0;
+        top: 0;
     }
     input {
         width: 100%;
         font-size: 14px;
-        min-width: 200px;
-        font-size: 14px;
-        border-radius: 6px 0 0 6px;
+        // min-width: 240px;
+        border-radius: 6px;
         background-color: #fff;
         border-color: var(--jelly-color-border);
+        height: 40px;
+        padding: 8px 16px;
     }
 }
 
@@ -256,6 +294,12 @@
     padding: 20px;
     border-radius: 8px;
     margin: 32px 0;
+    gap: 24px;
+    display: flex;
+    align-items: center;
+    .author-avatar{
+        flex: 0 0 auto;
+    }
     .avatar-img {
         width: 64px;
         height: 64px;
@@ -263,6 +307,7 @@
         object-fit: contain;
         background-color: #ffffff;
         border: 1px solid var(--jelly-color-border);
+
     }
     .author-name {
         font-size: 24px;
@@ -393,15 +438,15 @@
 .jelly-post-card {
     width: 100%;
     box-sizing: border-box;
-    overflow: hidden;
-    transition: transform 0.3s ease;
-    border-radius: 6px;
+    // overflow: hidden;
+
+    // border-radius: 6px;
     // background-color: var(--jelly-color-item-bg);
-    box-shadow:
-        rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-        rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    // box-shadow:
+    //     rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    //     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     .jelly-card-content {
-        padding: 20px;
+        padding: 20px 0;
         p {
             font-size: 1em;
             color: #555555;
@@ -416,7 +461,8 @@
         position: relative;
         width: 100%;
         padding-top: 56.25%; // 16:9 比例 (9 / 16 * 100%)
-
+        overflow: hidden;
+        border-radius: 6px;
         img {
             position: absolute;
             top: 0;
@@ -424,6 +470,11 @@
             width: 100%;
             height: 100%;
             object-fit: cover; // 确保图片覆盖整个容器
+
+            transition: transform 0.3s ease;
+            &:hover{
+                transform: scale(1.1);
+            }
         }
     }
     .jelly-card-title {
@@ -454,7 +505,7 @@ nav.jelly-rank-math-breadcrumb {
     border-bottom: 1px solid var(--jelly-color-border);
     p {
         display: block;
-        width: var(--jelly-max-width, 1140px);
+        width: var(--jelly-max-width, 1240px);
         margin: 0 auto;
         padding: 12px var(--jelly-side-width, 16px);
         font-size: 14px;
@@ -472,40 +523,44 @@ nav.jelly-rank-math-breadcrumb {
     .separator {
         margin: 0 4px;
     }
+    .last{
+        color: #555555;
+    }
 }
 
 /*
 * 分类列表
 */
-.jelly-post-categories{
+.jelly-archive-categories{
     margin: 24px 0;
+    .categories-title{
+        font-size: 16px;
+        margin-bottom: 18px;
+    }
     .categories-list{
         list-style: none;
         padding: 0;
-        margin-left: 8px;
-        border-left: 1px solid var(--jelly-color-border);
-        box-sizing: border-box;
+        font-size: 14px;
+        max-height: 400px;
+        overflow-y: auto;
+        &::-webkit-scrollbar{
+            width: 3px;
+        }
+        &::-webkit-scrollbar-track{
+            background-color: var(--jelly-color-border)
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: #555555;
+        }
         li {
-            position: relative;
-            padding-left: 16px;
-            &::before {
-                content: "";
-                display: block;
-                width: 9px;
-                height: 9px;
-                border-radius: 50%;
-                background: #333333;
-                position: absolute;
-                left: -5px;
-                top: 8px;
-            }
+            margin: 0;
+            border-bottom: 1px solid var(--jelly-color-border);
+            padding: 12px 6px;
             &.active{
+                background: #fafafa;
                 a{
-                    color: var(--jelly-color-primary);
-                    text-decoration: underline;
-                }
-                &::before{
-                    background: var(--jelly-color-primary);
+                    color:#141414;
+                    font-weight: 600;
                 }
             }
         }
@@ -515,9 +570,22 @@ nav.jelly-rank-math-breadcrumb {
     }
 }
 
-@media screen and (max-width: 1140px) {
+.jelly-global-form{
+    margin: 24px 0;
+    .form-title{
+        font-size: 16px;
+        margin-bottom: 18px;
+    }
+}
+
+@media screen and (max-width: 1240px) {
     nav.jelly-rank-math-breadcrumb p {
         width: 100%;
+    }
+    .jelly-archive-categories{
+        .categories-list{
+            font-size: 16px;
+        }
     }
 }
 
@@ -537,6 +605,7 @@ nav.jelly-rank-math-breadcrumb {
             grid-template-columns: repeat(1, 1fr);
         }
     }
+
 }
 #gt_float_wrapper {
     position: relative !important;
@@ -651,14 +720,27 @@ nav.rank-math-breadcrumb p {
     margin: 24px 0;
     h2 {
         font-weight: 600;
-        font-size: 24px !important;
+        font-size: 16px !important;
         position: relative;
+        margin-bottom: 18px;
         margin-top: 0;
     }
     nav {
         padding-left: 8px;
+        max-height: 400px;
+        overflow-y: auto;
+        &::-webkit-scrollbar{
+            width: 3px;
+        }
+        &::-webkit-scrollbar-track{
+            background-color: var(--jelly-color-border)
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: #555555;
+        }
         > ul {
             padding-left: 18px;
+            padding-right: 8px;
             border-left: 1px solid var(--jelly-color-border);
             > li {
                 padding-left: 16px;
@@ -684,10 +766,11 @@ nav.rank-math-breadcrumb p {
             margin: 0;
             padding-left: 0;
             position: relative;
-            margin: 12px 0;
+            margin: 6px 0;
         }
         a{
             color: #555555;
+            font-size: 14px;
         }
     }
 }
