--- a/assets/css/widget.scss
+++ b/assets/css/widget.scss
@@ -24,7 +24,7 @@
     input {
         width: 100%;
         font-size: 14px;
-        min-width: 240px;
+        // min-width: 240px;
         border-radius: 6px;
         background-color: #fff;
         border-color: var(--jelly-color-border);
@@ -108,6 +108,12 @@
     padding: 20px;
     border-radius: 8px;
     margin: 32px 0;
+    gap: 24px;
+    display: flex;
+    align-items: center;
+    .author-avatar{
+        flex: 0 0 auto;
+    }
     .avatar-img {
         width: 64px;
         height: 64px;
@@ -115,6 +121,7 @@
         object-fit: contain;
         background-color: #ffffff;
         border: 1px solid var(--jelly-color-border);
+
     }
     .author-name {
         font-size: 24px;
@@ -312,7 +319,7 @@ nav.jelly-rank-math-breadcrumb {
     border-bottom: 1px solid var(--jelly-color-border);
     p {
         display: block;
-        width: var(--jelly-max-width, 1140px);
+        width: var(--jelly-max-width, 1240px);
         margin: 0 auto;
         padding: 12px var(--jelly-side-width, 16px);
         font-size: 14px;
@@ -385,9 +392,14 @@ nav.jelly-rank-math-breadcrumb {
     }
 }
 
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 1240px) {
     nav.jelly-rank-math-breadcrumb p {
         width: 100%;
+    }
+    .jelly-archive-categories{
+        .categories-list{
+            font-size: 16px;
+        }
     }
 }
 
@@ -407,4 +419,5 @@ nav.jelly-rank-math-breadcrumb {
             grid-template-columns: repeat(1, 1fr);
         }
     }
+
 }
