--- a/assets/css/wordpress.scss
+++ b/assets/css/wordpress.scss
@@ -1,3 +1,37 @@
+
+
+
+.alignleft{
+    float: left;
+    margin-right: 1rem;
+}
+.aligncenter{
+    clear: both;
+    display: block;
+    margin-inline: auto;
+}
+
+.alignright{
+    float: right;
+    margin-left: 1rem;
+}
+
+.wp-caption-text{
+    margin:0;
+}
+
+.wp-caption{
+    margin-block-end: 1.25rem;
+    max-width: 100%;
+    img{
+        display: block;
+    margin-inline: auto;
+    }
+    .alignleft{
+        margin: 5px 20px 20px 0;
+    }
+}
+
 .navigation.pagination {
     margin: 32px 0;
     text-align: center;
