--- a/assets/css/plugin.css
+++ b/assets/css/plugin.css
@@ -156,10 +156,21 @@ nav.rank-math-breadcrumb p {
   font-size: 14px;
 }
 
-@media screen and (max-width: 747px) {
+@media screen and (max-width: 767px) {
   #rank-math-faq {
     padding: 0;
     background-color: none;
     border-radius: none;
+  }
+  .wp-block-rank-math-toc-block {
+    position: relative;
+    top: unset;
+  }
+  .wp-block-rank-math-toc-block nav {
+    max-height: 300px;
+  }
+  .wp-block-rank-math-toc-block h2 {
+    padding: 8px;
+    background: var(--jelly-color-item-bg);
   }
 }/*# sourceMappingURL=plugin.css.map */
