--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ button,
   border-radius: 0;
   transition: all 0.3s;
   min-height: 40px;
+  box-sizing: border-box;
 }
 
 button:focus:not(:focus-visible),
@@ -312,7 +313,7 @@ li {
 }
 
 hr {
-  border: none;
+  border: 0;
   border-top-width: 1px;
   border-top-style: solid;
   margin: 12px 0;
