新增版本号，并重新生成主题文件

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -11,6 +11,7 @@
   display: flex;
   margin: 32px 0;
   gap: 48px;
+  clear: both;
 }
 
 .jelly-container-content {
@@ -354,11 +355,24 @@
   position: relative;
   top: 4px;
 }
-.jelly-post-meta .meta-right {
+.jelly-post-meta .jelly-share-buttons {
+  margin: 0;
+}
+
+/*
+* 分享按钮
+*/
+.jelly-share-buttons {
   display: flex;
   gap: 8px;
+  align-items: center;
+  margin: 16px 0;
 }
-.jelly-post-meta .share-toggle {
+.jelly-share-buttons .share-title {
+  font-size: 14px;
+  color: #555555;
+}
+.jelly-share-buttons .share-toggle {
   border-radius: 50%;
   width: 28px;
   height: 28px;
@@ -367,12 +381,12 @@
   cursor: pointer;
   transition: all 0.3s;
 }
-.jelly-post-meta .share-toggle:hover {
+.jelly-share-buttons .share-toggle:hover {
   border-color: var(--jelly-color-primary);
   background-color: var(--jelly-color-primary);
   color: #fff;
 }
-.jelly-post-meta .share-toggle svg {
+.jelly-share-buttons .share-toggle svg {
   padding-top: 5px;
 }
 
@@ -554,6 +568,9 @@ nav.jelly-rank-math-breadcrumb .last {
   color: #555555;
 }
 
+/*
+* 全局表单
+*/
 .jelly-global-form {
   margin: 24px 0;
 }
@@ -562,6 +579,18 @@ nav.jelly-rank-math-breadcrumb .last {
   margin-bottom: 18px;
 }
 
+@media (max-width: 1240px) {
+  .jelly-content-table {
+    overflow-x: auto;
+    display: block;
+    width: 100%;
+  }
+  .jelly-content-table table {
+    width: 100%;
+    display: block;
+    white-space: nowrap;
+  }
+}
 @media screen and (max-width: 1240px) {
   nav.jelly-rank-math-breadcrumb p {
     width: 100%;
@@ -746,5 +775,16 @@ nav.rank-math-breadcrumb p {
     padding: 0;
     background-color: none;
     border-radius: none;
+  }
+  .wp-block-rank-math-toc-block {
+    position: relative;
+    top: unset;
+  }
+  .wp-block-rank-math-toc-block nav {
+    max-height: 300px;
+  }
+  .wp-block-rank-math-toc-block h2 {
+    padding: 8px;
+    background: var(--jelly-color-item-bg);
   }
 }/*# sourceMappingURL=theme.css.map */
